# cm

./: .gitignore  CLAUDE.md  LICENSE  README.md
backend/cm-ai/: pyproject.toml
backend/cm-auth/: README.md  pom.xml
backend/cm-auth/cm-auth-api/: pom.xml
backend/cm-auth/cm-auth-server/: pom.xml
backend/cm-auth/docs/: cm-auth-api.md
backend/cm-chat/: .gitignore  README.md  pyproject.toml
backend/cm-chat/app/: __init__.py  main.py
backend/cm-chat/app/api/: chat_router.py  deps.py  router.py
backend/cm-chat/app/api/routes/: user_routes.py
backend/cm-chat/app/core/: config.py  logging_config.py
backend/cm-chat/app/db/: __init__.py  base.py  base_class.py  session.py
backend/cm-chat/app/models/: user.py
backend/cm-chat/app/repositories/: __init__.py  user_repository.py
backend/cm-chat/app/schemas/: __init__.py  user.py
backend/cm-chat/app/service/: chat_service.py
backend/cm-chat/app/services/: __init__.py  exceptions.py  user_service.py
backend/cm-chat/tests/: test_users.py
backend/cm-framework/: README.md
backend/cm-gateway/: README.md  pom.xml
backend/cm-tool/: README.md  pom.xml
docs/: 项目整体架构.md
frontend/cm-auth-admin-ui/: .env.development  README.md  index.html  package.json  vite.config.ts
frontend/cm-auth-ui/: index.html  package.json  pnpm-lock.yaml
frontend/cm-auth-web/: README.md  index.html  package-lock.json  package.json  vite.config.ts
frontend/cm-tool-ui/: .env.test
migration/: README.md
migration/v1.0.0/: v1.0.0_mysql_cm_auth.sql  v1.0.0_mysql_nacos.sql  v1.0.0_nacos_auth.yaml  v1.0.0_nacos_common.yaml
(+183 files in other folders)
