[project]
name = "cm-chat"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.118.0",
    "uvicorn>=0.37.0",
    "sqlalchemy[asyncio]>=2.0.34",
    "pydantic-settings>=2.2.1",
    "python-dotenv>=1.0.1",
    "alembic>=1.13.2",
    "aiosqlite>=0.20.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.2",
    "pytest-asyncio>=0.23.8",
    "httpx>=0.27.2",
]
